@@ -1,0 +1,38 @@
+top_builddir = ../..
+
+include ../../config.mk
+
+.SUFFIXES: .lo
+
+.cpp.lo:
+	$(LTCOMPILE) $(CXX) $(CXXFLAGS) $(WERROR) $(NOTIFICATIONCPPFLAGS) $(COMPILE) $< $(OUT)$@
+
+.cpp.obj:
+	$(CXX) $(CXXFLAGS) $(WERROR) $(NOTIFICATIONCPPFLAGS) $(COMPILE) $<
+
+all: $(SQLR)notification_default.$(LIBEXT)
+
+clean:
+	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest
+	$(RMTREE) .libs
+
+$(SQLR)notification_default.$(LIBEXT): default.cpp default.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ default.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+
+install: $(INSTALLLIB)
+
+installdll:
+	$(MKINSTALLDIRS) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)notification_default.$(LIBEXT) $(libexecdir)
+
+installlib: $(INSTALLSHAREDLIB)
+
+installsharedlib:
+	$(MKINSTALLDIRS) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)notification_default.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)notification_default.a
+	$(RM) $(libexecdir)/$(SQLR)notification_default.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)notification_default.so so $(MODULESUFFIX)
+
+uninstall:
+	$(RM) $(libexecdir)/$(SQLR)notification_default.*
