@@ -22,6 +22,7 @@
 	non-ascii character encodings work with the C# API now
 	rudiments prompt class is used instead of using readline directly now
 	renamed "logger-events" to just "events"
+	added notification framework
 
 0.65.0 - removed erroneous SQLR_SQLExecute export in ODBC driver
 	fixed call type of internal ODBC driver functions and made them static
